Revision history for CGI-Info

0.99
	Don't try to read from the terminal when not interactive

0.98	Tue Apr 15 13:39:22 EDT 2025
	Allow AUTOLOAD in subclasses
	Use Config::Abstraction instead of Config::Auto
	Fix http://www.cpantesters.org/cpan/report/00f6f172-6d25-1014-9d67-b345cf55203a

0.97	Fri Mar 28 07:56:10 EDT 2025
	Not all loggers (e.g. Log::Any) can cope with a reference to an ARRAY
	Added config_file argument to new()
	Added logdir() sanity checks
	Improved blocking for directory traversal attacks
	Fix auto_load calling unknown routine isFalse

0.96	Mon Mar 17 08:11:48 EDT 2025
	Use Log::Abstraction
	Added the auto_load parameter to disable AUTOLOAD

0.95	Sun Mar  2 19:52:56 EST 2025
	Use Params::Get

0.94	Fri Feb 28 12:24:30 EST 2025
	number types can also have min and max values
	Now logs all messages in the array messages.  The warnings array has been removed.
	Use Params::Validate::Strict rather than built in code

0.93	Wed Feb 26 09:47:02 EST 2025
	Use facility local0
	Improved upload filename generation to prevent overwriting
	allow() now supports full rule schemas
	Croak rather than carp on expect, and remove all its code
	Intercepted arguments that result in 422 now raise LOG_NOTICE rather than LOG_INFO

0.92	Thu Feb 13 15:16:57 EST 2025
	Return empty string with warnings_as_string() rather than undef when no warnings

0.91	Mon Feb 10 14:32:57 EST 2025
	Added t/waf.t to test the Web Application Firewall
	params(): instead of cleaning up XSS, now sets them to 403 and doesn't pass the values back
	Added warnings_as_string()
	Added the raw option to as_string()

0.90	Tue Feb  4 08:57:49 EST 2025
	Ensure status is set before calling _warn so it's not lost (some 403s were being lost)
	Try harder to call Google a search_engine
	Allow the logger to be a filename

0.89	Tue Jan 14 15:45:16 EST 2025
	Fix http://www.cpantesters.org/cpan/report/048c5109-6c77-1014-8029-e79fc7de0390

0.88	Mon Jan 13 09:33:24 EST 2025
	Improved arg checking