@@ -152,7 +152,7 @@ sub new
 	}
 
 	# Load the configuration from a config file, if provided
-	if(exists($args{'config_file'}) && (my $config = Config::Abstraction->new(config_dirs => ['/'], config_file => $args{'config_file'})->all())) {
+	if(exists($args{'config_file'}) && (my $config = Config::Abstraction->new(config_dirs => ['/'], config_file => $args{'config_file'}, env_prefix => "${class}_")->all())) {
 		# my $config = YAML::XS::LoadFile($args{'config_file'});
 		if($config->{$class}) {
 			$config = $config->{$class};
