@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.99
 	Don't try to read from the terminal when not interactive
+	Added t/config.t
 
 0.98	Tue Apr 15 13:39:22 EDT 2025
 	Allow AUTOLOAD in subclasses
